07_retirement/grade.txt
Grading at Mon Sep  7 22:37:26 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘total’:
retirement.c:23:20: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘contribuition’
   balance += status.contribuition;
                    ^
retirement.c: In function ‘main’:
retirement.c:59:10: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘contribuition’
   working.contribuition = 1000;
          ^
retirement.c:64:10: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘contribuition’
   retired.contribuition = -4000;
          ^
The code did not compile!

Overall Grade: F
